test/fixtures/fail/ident_question_mid.l4gs.g
; `?` may only be a whole-identifier prefix or a trailing case-insensitive
; marker on a name segment. Mid-name it splits the token.
        fo?o = 1
